<resources>
    <string name="app_name">Commando</string>
    <string name="app_name_display">SkilEx</string>
    <string name="tag_line">THE ULTIMATE SERVICE APP</string>
    <string name="empty" />
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_text">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reg_name">Name *</string>
    <string name="reg_name_hint">John</string>
    <string name="reg_mob_no">Phone Number *</string>
    <string name="reg_mob_no_hint">0123456789</string>
    <string name="reg_mail_id">Email ID (Optional)</string>
    <string name="reg_mail_id_hint">info@demo.com</string>
    <string name="reg_submit">Submit</string>
    <string name="reg_action_bar">Registration</string>
    <string name="reg_name_error">Enter valid name</string>
    <string name="reg_phone_error">Enter valid phone number</string>
    <string name="update_profile_pic">Update Profile Picture</string>
    <string name="term_of_agreement">Term of Agreement</string>
    <string name="agree">I agree the above Terms &amp; Conditions</string>
    <string name="verificationcode">Verification Code</string>
    <string name="didntrecievecode">Didn\'t receive the code?\t</string>
    <string name="entercodetxt">We have sent you 4 digit verification code to\nyour mobile number</string>
    <string name="resend">Resend now</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="changenumber">Change number</string>
    <string name="otp_action_bar">OTP</string>
    <string name="otp_confirm_no">Confirm your mobile number: </string>
    <string name="otp_proceed">Proceed</string>
    <string name="otp_invalid">Invalid OTP</string>
    <string name="category_action_bar">Select Category</string>
    <string name="go_next">Next</string>
    <string name="select_enough_cat">Not enough categories selected</string>
    <string name="select_atleaset">Please select at least one categories</string>
    <string name="org_type_action_bar">Select Organization</string>
    <string name="org_info">*How would you like to identify yourself?</string>
    <string name="reg_org">A registered organization</string>
    <string name="un_org">An individual / an unregistered organization</string>
    <string name="reg_org_action_bar">Organization details</string>
    <string name="reg_org_title">Tell us about your business</string>
    <string name="reg_org_company_name">Enter your registered company name</string>
    <string name="reg_org_no_of_people">How many people work for you?</string>
    <string name="reg_org_address_1">Enter your business address (line 1)</string>
    <string name="reg_org_address_2">Enter your business address (line 2)</string>
    <string name="reg_org_city">Enter city</string>
    <string name="reg_org_postal">Enter postal code</string>
    <string name="reg_org_state">Enter state</string>
    <string name="reg_org_building_own">Own</string>
    <string name="reg_org_building_rental">Tenancy</string>
    <string name="reg_org_building_title">Details of office premises</string>
    <string name="reg_doc_upload_action_bar">Documentation</string>
    <string name="reg_doc_upload_title">Documentation of Service Organization</string>
    <string name="org_rc">RC Certificate Number (Optional)</string>
    <string name="org_rc_hint">Enter RC Certificate Number</string>
    <string name="org_gst">GST Certificate Number</string>
    <string name="org_gst_hint">Enter GST Number</string>
    <string name="org_pan">Organization PAN Number</string>
    <string name="org_pan_hint">Enter PAN Number</string>
    <string name="org_authority">Are you going to be a signing authority</string>
    <string name="un_reg_org_action_bar">Enter individual details</string>
    <string name="individual_title">Individual details</string>
    <string name="check_box_1">Are you an individual service expert?</string>
    <string name="check_box_2">Someone who also coordinates other experts?</string>
    <string name="un_reg_emp_count_box">What is the strength of your team?</string>
    <string name="check_also_expert">Will you be leading your team in the project you undertake?</string>
    <string name="expert_yes">Yes</string>
    <string name="expert_no">No</string>
    <string name="check_any_case">Do you have any criminal history?</string>
    <string name="un_reg_doc_upload_action_bar">Documentation</string>
    <string name="un_reg_doc_upload">Documentation of Individual Service Commando</string>
    <string name="pan_card_title">PAN Card Number</string>
    <string name="aadhaar_card_title">Aadhaar Card Number</string>
    <string name="upload">Upload</string>
    <string name="id_selection_title">ID Proof and Address Proof</string>
    <string name="id_address_title">Address proof of your office</string>
    <string name="id_selection_type">Select the ID proof you want to submit</string>
    <string name="id_proof_number">Enter your proof number</string>
    <string name="bank_details_title">Bank Account Details</string>
    <string name="bank_name">Enter the bank name</string>
    <string name="bank_acc_no">Enter bank account number</string>
    <string name="bank_ifsc">Enter bank IFSC number</string>
    <string name="bank_branch">Enter bank branch name</string>
    <string name="bank_pass_book">Kindly scan and upload your passbook\'s \nfront page</string>
    <string name="term"><u>Term of Agreement</u></string>
    <string name="initial_deposit_action_bar">Deposit</string>
    <string name="deposit_title">Registration Fee</string>
    <string name="pay">Pay</string>
    <string name="deposit_description">* One time Registration fee for administration purpose&#8230;</string>
    <string name="advance_redirect_url">http://skilex.in/development/ccavenue_app/serv_provider_advance.php</string>
    <string name="redirect_page">Please wait your are redirecting to \nthe payment page&#8230;</string>
    <string name="upload_doc_verify_display_title">Document Verification</string>
    <string name="upload_doc_verify_pending_status">Pending</string>
    <string name="pending_desc">Your document is under verification process.\nKindly be patient\n to get start.</string>
    <string name="close">Close</string>
    <string name="doc_verify_display_title">Document Verification</string>
    <string name="success">Success</string>
    <string name="success_desc">Your document is verified successfully.\nYou can now Proceed\n to get started.</string>
    <string name="welcome_desc">To the platform where expertise is served\nwith convenience</string>
    <string name="get_start">Get Started</string>
    <string name="payment_redirect_url">http://skilex.in/development/ccavenue_app/serv_provider_payment.php</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="access_code">Access Code</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="reg_aamt">You can pay directly at SkilEx office.</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="payment_success">Awesome!</string>
    <string name="payment_failed">Something\'s wrong!</string>
    <string name="payment_success_comment">Your payment transaction \ncompleted successfully</string>
    <string name="payment_failed_comment">Your payment transaction failed</string>
    <string name="go_home">Back to Home </string>
    <string name="try_again">Try Again</string>
    <string name="service_person_doc_upload">Documentation of Service Expert</string>
    <string name="back_home">Back to Home</string>
    <string name="on_upload_success">Thank you! Your documents have been\nuploaded successfully</string>
    <string name="category">Category</string>
    <string name="subcategory">Sub Category</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time Slot</string>
    <string name="location">Select Service Location</string>
    <string name="cancel">Cancel Service</string>
    <string name="accept">Accept Service</string>
    <string name="assign">Assign</string>
    <string name="cancel_service_noadvance_alert1">Are you sure you want to cancel your service?</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="reason">Reason</string>
    <string name="comment">Comment</string>
    <string name="rating_title">Rate Service</string>
    <string name="rating_text">Rate your service</string>
    <string name="rate">Rate</string>
    <string name="confirm">Confirm</string>
    <string name="progress_loading">Loading&#8230;</string>
    <string name="error_entry">Entry Invalid</string>
    <string name="error_mail">Enter valid mail ID</string>
    <string name="error_number">Enter valid phone number</string>
    <string name="empty_entry">Field cannot be empty</string>
    <string name="error_pincode">Enter valid pincode</string>
    <string name="error_aadhaar">Enter valid Aadhaar no</string>
    <string name="empty_spinner">Select some value </string>
    <string name="home">Home</string>
    <string name="service_expert">Service Expert</string>
    <string name="profile_title">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="about_us">About Us</string>
    <string name="track">Track</string>
    <string name="update">Update</string>
    <string name="serv_pers_full_name">Full name</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pincode">PIN</string>
    <string name="state">State</string>
    <string name="language_known">Language known</string>
    <string name="edu_qulifiy">Education qualification</string>
    <string name="alert_button_ok">OK</string>
    <string name="pay_button_online">Pay Online</string>
    <string name="pay_button_cash">Pay at SkilEx</string>
    <string name="about_content">SkilEx is an emerging Indian start up that aims to build a scalable business model which serves as a platform connecting people, who are in need of local and personal services, with service Commandos. When there is need of service there is always a void in reaching to service experts at any given time. SkilEx comes into this scene of desperation to help consumers get the required service done at the right time. One can access a range of local services like refurbishment, renovation, restoration etc.; and personal services like fitness training, massages, physiotherapy, counselling, etc., via SkilEx and get things done in a convenient and affordable way.
\n\nInitially aimed at launching in major cities of South India, SkilEx’s vision is to expand its base across the country including all the cities, building a bond between the service Commandos and their customers.
</string>
</resources>