<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/serv_pers_full_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:maxLength="50"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/gender_array" />

                <EditText
                    android:id="@+id/edtDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/dob"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:maxLength="80"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/city"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:digits="0123456789"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/state"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:maxLength="20"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtLangKnown"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/language_known"
                android:inputType="textMultiLine"
                android:maxLength="240"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtEduQualifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/edu_qulifiy"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:maxLength="20"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtAnyPoliceCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="1dp"
                android:text="@string/check_any_case"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/rdgYesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="1dp">

                <RadioButton
                    android:id="@+id/rdbYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/expert_yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rdbNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/expert_no"
                    android:textColor="@color/black" />
            </RadioGroup>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_color"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>