<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/alerere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:elevation="50dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/white"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_payatskilex"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_aamt"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_button_ok"
                android:background="@color/blue"
                android:onClick="finn"
                android:textColor="@color/white"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/serv_pay_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/shadow_round"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:id="@+id/online_layout"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/online_payment_icon"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_pay_online" />

            </RelativeLayout>

            <Button
                android:id="@+id/pay_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/online_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_color"
                android:onClick="onClick"
                android:paddingStart="40dp"
                android:textAllCaps="false"
                android:paddingEnd="40dp"
                android:text="@string/pay_button_online"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pay_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:onClick="onCashClick"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:text="@string/pay_button_cash"
                android:textColor="@color/blue" />

        </LinearLayout>


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/redirect_page"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/access_code" />

            <EditText
                android:id="@+id/accessCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="AVQM86GG76CA98MQAC">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/merchant_id" />

            <EditText
                android:id="@+id/merchantId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="225068" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="Order Id" />

            <EditText
                android:id="@+id/orderId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/currency" />

            <EditText
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="INR" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="1.00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/redirect_url" />

            <EditText
                android:id="@+id/redirectUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="" />
            <!--http://122.182.6.216/merchant/ccavResponseHandler.jsp-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/cancel_url" />

            <EditText
                android:id="@+id/cancelUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="" />
            <!--http://122.182.6.216/merchant/ccavResponseHandler.jsp-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/rsa_url" />

            <EditText
                android:id="@+id/rsaUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="" />
<!--            https://test.ccavenue.com/transaction/getRSAKey-->
<!--            https://www.skilex.in/development/ccavenue_app/GetRSA.php-->
<!--            https://secure.ccavenue.com/transaction/jsp/GetRSA.jsp-->

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:onClick="onClick"
                android:text="@string/pay" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>